<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.wariwilca_go.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_reserva"
        android:name="com.example.wariwilca_go.ui.reserva.reservaFragment"
        android:label="@string/menu_reserva"
        tools:layout="@layout/fragment_reserva" />

    <fragment
        android:id="@+id/nav_recorrido"
        android:name="com.example.wariwilca_go.ui.recorrido.recorridoFragment"
        android:label="@string/menu_recorrido"
        tools:layout="@layout/fragment_recorrido" >
    </fragment>

    <fragment
        android:id="@+id/nav_busquedaqr"
        android:name="com.example.wariwilca_go.ui.buscar.busquedaFragment"
        android:label="@string/menu_busqueda"
        tools:layout="@layout/fragment_busqueda" />

    <fragment
        android:id="@+id/nav_registrar"
        android:name="com.example.wariwilca_go.ui.registrar.registrarFragment"
        android:label="@string/menu_registrar"
        tools:layout="@layout/fragment_registrar" />



</navigation>